--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ body{
     color: #d9d9d9;
 }
 
+h2 {
+    font-size: 2.2vh;
+}
+
 /* Main headline on front page */
 #mainH1{
     text-align: center;
@@ -47,8 +51,8 @@ nav a {
 /* Grid container styling */
 
 #container {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 2vb;
+    margin-right: 2vb;
     padding-top: 2vh;
     width: 90vw;
     height: 60vh;
@@ -70,7 +74,7 @@ nav a {
     font-size: 1.85vh;
     grid-column-start: 1;
     grid-column-end: 2;
-    justify-content: center;
+    justify-content: left;
 }
 
 .item two {
